syntax = "proto3";

package raftlogpb;

message RaftLogEntry {
  CommandType type = 1;
  bytes payload = 2;
}

enum CommandType {
  COMMAND_TYPE_UNKNOWN = 0;
  COMMAND_TYPE_ADD_BLOCK = 1;

  // This is a temporary solution.
  COMMAND_TYPE_TRUNCATE = 4196;
}

message TruncateCommand {
  uint64 timestamp = 1;
}
